# Tethys

./: Cargo.toml  LICENSE  README.md  sample_inventory.json
.github/workflows/: ci.yml  release.yml
assets/profiles/: generic_dps.json  support_er.json
crates/app/: Cargo.toml
crates/app/src/: gui.rs  main.rs  sample.rs
crates/core/: Cargo.toml
crates/core/examples/: dump_profiles.rs
crates/core/src/: data.rs  lib.rs  model.rs  optimizer.rs  parse.rs  score.rs
crates/scanner/: Cargo.toml
crates/scanner/examples/: calibration_demo.rs
crates/scanner/src/: capture.rs  layout.rs  lib.rs  ocr.rs
docs/: index.html  robots.txt  site.webmanifest  sitemap.xml
