[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/scanner",
    "crates/app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Pham Tran Gia Hung"]
repository = "https://github.com/Hung1510/tethys"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
anyhow = "1"
thiserror = "1"
