[package]
name = "tethys-core"
description = "Domain model, scoring, and optimizer for Wuthering Waves echo builds. Platform-independent."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tethys_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
