[package]
name = "tethys-scanner"
description = "Screen capture and OCR for reading Wuthering Waves echoes into tethys-core types."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "tethys_scanner"
path = "src/lib.rs"

[dependencies]
tethys-core = { path = "../core" }
anyhow = { workspace = true }
# png-only keeps this pure-Rust and dependency-light; the capture path adds
# platform backends behind the `capture` feature.
image = { version = "0.24", default-features = false, features = ["png"] }

# Cross-platform screen capture. Optional so the workspace builds without it.
xcap = { version = "0.0.12", optional = true }
# Tesseract binding. Requires the system libtesseract; optional for that reason.
rusty-tesseract = { version = "1.1", optional = true }

[features]
default = []
# Enable real screen capture (xcap: Windows / macOS / Linux).
capture = ["dep:xcap"]
# Enable the Tesseract OCR backend (needs libtesseract + libleptonica installed).
tesseract = ["dep:rusty-tesseract"]
